Massive re-organisation to implement swagger endpoints.
