# swagger/api_swagger.yaml
@@ -21,21 +21,18 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
       responses:
         200:
           description: Successful response
           schema:
             type: array
             items:
-              $ref: "#/definitions/Client"
+              $ref: "#/definitions/ApiClient"
         400:
           description: Something went wrong
     post:
@@ -47,22 +44,21 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
         - name: client
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Client"
+            $ref: "#/definitions/ApiClient"
       responses:
         200:
           description: Successful response
+          schema:
+            $ref: "#/definitions/ApiClient"
         400:
           description: Something went wrong
   /clients/{clientId}:
@@ -81,19 +77,16 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
       responses:
         200:
           description: Successful response
           schema:
-            $ref: "#/definitions/Client"
+            $ref: "#/definitions/ApiClient"
         400:
           description: Something went wrong
     put:
@@ -111,19 +104,16 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
         - name: client
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Client"
+            $ref: "#/definitions/ApiClient"
       responses:
         200:
           description: Successful response
@@ -144,19 +134,11 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
-        - name: client
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Client"
       responses:
         200:
           description: Successful response
@@ -178,26 +160,23 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
       responses:
         200:
           description: Successful response
           schema:
             type: array
             items:
-              $ref: "#/definitions/Record"
+              $ref: "#/definitions/ApiRecord"
         400:
           description: Something went wrong
     post:
       description: |
-        Creates a new 'Record' enitity for thr thw owning client
+        Creates a new 'Record' enitity for the owning client
       parameters:
         - name: clientId
           in: path
@@ -209,22 +188,21 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
-        - name: client
+        - name: record
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Record"
+            $ref: "#/definitions/ApiRecord"
       responses:
         200:
           description: Successful response
+          schema:
+            $ref: "#/definitions/ApiRecord"
         400:
           description: Something went wrong
   /clients/{clientId}/records/{recordId}:
@@ -248,19 +226,16 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
       responses:
         200:
           description: Successful response
           schema:
-            $ref: "#/definitions/Record"
+            $ref: "#/definitions/ApiRecord"
         400:
           description: Something went wrong
     put:
@@ -283,19 +258,16 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
-        - name: client
+        - name: record
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Record"
+            $ref: "#/definitions/ApiRecord"
       responses:
         200:
           description: Successful response
@@ -321,28 +293,20 @@ paths:
           description: The encruption key
           required: true
           type: string
-        - name: x-key-kype
+        - name: x-key-type
           in: header
           description: The encryption key type
           required: true
           type: string
-          enum:
-            - CONSULTANT
-            - CLIENT
-        - name: client
-          in: body
-          required: true
-          schema:
-            $ref: "#/definitions/Record"
       responses:
         200:
           description: Successful response
         400:
           description: Something went wrong
-      
-      
+
+
 definitions:
-  Client:
+  ApiClient:
     type: object
     required:
       - fname
@@ -370,8 +334,8 @@ definitions:
       records:
         type: array
         items:
-          $ref: "#/definitions/Record"
-  Record:
+          $ref: "#/definitions/ApiRecord"
+  ApiRecord:
     type: object
     required:
       - name
@@ -392,6 +356,3 @@ definitions:
       updated_at:
         type: string
         description: The update date
-      client_id:
-        type: integer
-        description: The id of the owning client
